--- a/code/dump/main.scss
+++ b/code/dump/main.scss
@@ -24,6 +24,7 @@
   
 }
 #opts_holder{
+  z-index: 1;
   position: -webkit-sticky;
   position: sticky;
   top:0px;
@@ -61,10 +62,11 @@
       width:100%;
       display:flex;
       flex-direction: row;
-      justify-content: space-evenly;
+      justify-content: space-between;
       padding-top:2rem;
       padding-bottom:1rem;
-     
+     margin-left:0.1rem;
+     margin-right:0.5rem;
     }
    #nav{
 width:100%;
