--- a/code/login.css
+++ b/code/login.css
@@ -1,96 +1,82 @@
 #frame{
-    background: url("/media/bg1.jpg") 50% 20%;
+    background: white;
     background-size: cover;
-    height:100vh;
-    width:100vw;
+    min-height:80vh;
+    width:100%;
     transition-duration: 50ms;
     background-repeat: no-repeat;
     overflow: hidden;
-    position: fixed;
-    top: 0px;
 }
-#hed{
+#topico{
     position: relative;
-    max-height: 50vh;
-    min-height: 30vh;
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    padding-top:1rem;
-    justify-content: space-around;
-    width: 100%;
-}
-#foot{
-    position:fixed;
-    bottom:3vh;
-    height:40vh;
-    display:flex;
-    justify-content: space-evenly;
-    flex-direction: column;
+  height:17vh;
     width:100%;
-    align-items: center;
-    padding: 0.5rem;
-    padding-bottom: 0rem;
-   
+    top:1vh;
+     }
+
+     .sec{
+        position:relative;
+        margin-bottom:2rem;
+        padding:1rem;
+        width: 100%;
+        padding-top:0px;
+      }
+
+
+
+
+      #c1{
+        background: linear-gradient(120deg,#00bbcf,#0019ce);
+       }
+       #c2{
+         background:linear-gradient(120deg,#008227,#c0ce00);
+       }
+       #c3{
+         background:linear-gradient(120deg,#c70074,#ce9700);
+       }
+       #c4{
+         background:linear-gradient(120deg,#520082,#ce0078);
+       }
+       .card{
+         position: relative;
+         min-height:30vh;
+         background:rgb(247, 247, 247);
+         border-radius:1.5rem;
+         margin:1rem;
+         padding:3rem;
+         max-width:30rem;
+         box-shadow: 4px 5px 20px 5px #4b4b4b45;
+         transition-duration: 60ms;
+         cursor: pointer;
+       }
+       .card:hover{
+         box-shadow: 4px 5px 25px 10px #00000045;
+         padding-top:3.5rem;
+       }
+       #cards{
+         display:grid;
+         grid-template-rows: auto;
+       }
+
+
+
+
+
+@media(min-width:500px){
+    #cards{
+        grid-template-columns: auto auto;
+      }
+  
 }
-.opt{
-    position: relative;
-padding:1rem;
-background: rgba(255, 255, 255, 0.342);
--webkit-backdrop-filter:blur(15px);
-  backdrop-filter:blur(15px);
-border-radius: 1rem;
-width:100%;
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-}
-#opts{
-    width:100%;
-    position: relative;
-    height:80%;
-    display:flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    padding: 1rem;
-padding-bottom: 0rem; 
-padding-top: 0rem;
-}
-@media(min-width:560px){
-    #opts{
-        flex-direction: row;
-        height:60%;
+@media(min-width:900px){
+    #cards{
+        grid-template-columns: auto auto auto;
+      } 
+       .card{
+       margin:2rem;
+   }
     }
-}
-#inf{
-    position: fixed;
-    top:36vh;
-    right:0vw;
-    width:100%;
-    height:4rem;
-}
-#info{
-    color:white;
-    background: rgba(255, 255, 255, 0.333);
-    border-radius: 4rem;
-}
-@media(min-width:700px){
-    #opts{
-        flex-direction:row;
-        max-height: 45%;
-        max-width: 50rem;
-    }
-    .opt{
-        max-width: 20rem;
-        -webkit-backdrop-filter:blur(30px);
-  backdrop-filter:blur(30px);
-    }
-    #inf{
-    position: fixed;
-    top:1rem;
-    right:1rem;
-    width:auto;
-    z-index:2 ;
-}
-}
+
+
+
+  
